got basic calendar logic working